# impact-range-assessment

./: .gitignore  LICENSE  README.md
paper_examples_python/: README.md
paper_examples_python/linear_example/: linear_data.csv  linear_data_summary.csv  linear_ira.py
paper_examples_python/nonlinear_example/: nonlinear_data.csv  nonlinear_data_summary.csv  nonlinear_ira.py
python/: README.md  pyproject.toml
python/ira/: __init__.py  ira.py
python/irapy/: __init__.py  irapy.py
