[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "irapy"
version = "0.1.0"
description = "Impact Range Assessment (IRA): An Interpretable Sensitivity Measure for Regression Modeling"
readme = "README.md"
keywords = [
    "regression",
    "model interpretability",
    "sensitivity analysis",
    "machine learning",
    "explainable ai"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",   
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis"
]
license = "MIT"
license-files = ["LICENSE*"]
requires-python = ">=3.9"
authors = [
    { name = "Jihao You" },
    { name = "Dan Tulpan" },
    { name = "Jiaojiao Diao" },
    { name = "Jennifer L. Ellis" }
]
dependencies = [
    "numpy>=1.26,<2.3",
    "pandas>=2.0,<3.0",
    "joblib>=1.2.0"
]

[project.urls]
Homepage = "https://github.com/jyou2025/impact-range-assessment"
